<resources>
    <string name="app_name">MiCRM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Personas">Personas</string>
    <string name="Organizacion">Organizacion</string>
    <string name="Negocio">Negocio</string>
    <string name="Actividades">Actividades</string>
    <string name="name">Gestor de Actividades</string>
    <!-- Vista Persona -->
    <string name="nombrePersona">Nombre</string>
    <string name="telefonoPersona">Telefono</string>
    <string name="correoPersona">Correo</string>
    <string name="enviar">Agregar</string>
    <!-- Vista Organizacion -->
    <string name="nombreOrg">Nombre</string>
    <string name="direccionOrg">Direccion</string>
    <string name="nombreNegocio">Titulo del Negocio</string>
    <string name="descripcionNegocio">Descripcion</string>
    <string name="orgNegocio">Organización</string>
    <string name="personaNegocio">Persona</string>
    <!-- Vista Negocio -->
    <string name="valorNegocio">Valor</string>
    <string name="fecha_de_cierre">Fecha de Cierre</string>
    <string name="estado_del_n_negocio">Estado del \n negocio</string>
    <string-array name="EstadosNegocio">
        <item>No iniciado</item>
        <item>En curso</item>
        <item>En espera</item>
        <item>Cancelado</item>
    </string-array>
    <!-- Vista Actividad-->
    <string name="tipoActividad">Tipo</string>
    <string name="descripci_n_de_la_actividad">Descripción de la Actividad</string>
    <string name="negocioActividad">Negocio</string>
    <string name="fecha">Seleccionar    Fecha</string>
    <string name="hora">Seleccionar Hora</string>
    <string name="nombre_de_la_actividad">Nombre de la Actividad</string>
    <string name="personaActividad">Persona</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
</resources>
