<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.desafioandroid.NegocioActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nombreNegocio"
        android:layout_alignParentTop="true"
        android:hint="@string/nombreNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DescripcionNegocio"
        android:layout_below="@+id/nombreNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/nombreNegocio"
        android:hint="@string/descripcionNegocio" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/orgNegocio"
        android:layout_below="@+id/DescripcionNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/orgNegocio" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/PersonaNegocio"
        android:hint="@string/personaNegocio"
        android:layout_below="@+id/orgNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ValorNegocio"
        android:layout_below="@+id/PersonaNegocio"
        android:hint="@string/valorNegocio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/FechaCierre"
        android:elegantTextHeight="false"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:hint="@string/fecha_de_cierre" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/spinnerEstados"
        android:layout_below="@+id/buttonFecha"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/buttonFecha" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/estado_del_n_negocio"
        android:id="@+id/textView2"
        android:elegantTextHeight="false"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/spinnerEstados"
        android:layout_alignEnd="@+id/FechaCierre"
        android:layout_below="@+id/buttonFecha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/botonNegocio"
        android:layout_marginBottom="58dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_fecha"
        android:id="@+id/buttonFecha"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/ValorNegocio"
        android:layout_toEndOf="@+id/FechaCierre" />

</RelativeLayout>
