<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.desafioandroid.ActividadesActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nombreActividad"
        android:layout_alignParentTop="true"
        android:hint="@string/descripci_n_de_la_actividad"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TipoActividad"
        android:layout_below="@+id/nombreActividad"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/nombreActividad"
        android:hint="@string/tipoActividad" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/orgActividad"
        android:layout_below="@+id/TipoActividad"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/orgNegocio" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/PersonaActividad"
        android:hint="@string/personaNegocio"
        android:layout_below="@+id/orgActividad"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/NegocioActividad"
        android:layout_below="@+id/PersonaActividad"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/PersonaActividad"
        android:hint="@string/negocioActividad" />

    <DatePicker
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/datePicker"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/datePicker"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/datePicker"
        android:layout_toStartOf="@+id/datePicker"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:id="@+id/timepicker"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/datePicker"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/botonActividad"
        android:layout_below="@+id/timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

</RelativeLayout>
