<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.desafioandroid.PersonasActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nombrePersona"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/telPersona"
        android:hint="@string/nombrePersona" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telPersona"
        android:layout_above="@+id/mailPersona"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:hint="@string/telefonoPersona" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mailPersona"
        android:layout_above="@+id/botonPersona"
        android:layout_alignStart="@+id/telPersona"
        android:layout_marginBottom="60dp"
        android:hint="@string/correoPersona" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/botonPersona"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp" />
</RelativeLayout>
