<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.desafioandroid.OrganizacionActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombreOrg"
        android:hint="@string/nombreOrg"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="40px" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DireccionOrg"
        android:hint="@string/direccionOrg"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nombreOrg"
        android:layout_alignEnd="@+id/nombreOrg"
        android:paddingBottom="40px" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/TelefonoOrg"
        android:hint="@string/telefonoPersona"
        android:layout_below="@+id/DireccionOrg"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/DireccionOrg"
        android:paddingBottom="40px" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonOrg"
        android:text="@string/enviar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

</RelativeLayout>
